<resources>
    <string name="app_name">EMBL GO</string>
    <string name="home_screen_button">EMBL Heidelberg</string>
    <string name="home_screen_button_2">Guest</string>
    <string name="home_screen_list">Find and scan all of the EMBLmon posters around the ATC to win prizes!</string>
    <string name="nfcscreen_button">VIEW EMBLDEX</string>
    <string name="nfcscreen_leaderboard">VIEW Leaderboard</string>
    <string name="caught_list_header">Caught EMBLmon:</string>
    <string name="action_settings">Settings</string>
    <string name="list_number_caught">You have caught 0 of 18 EMBLmon</string>
    <string name="nfcscreen_qr_button">Scan QR</string>
    <string name="nfcscreen_finished_text">Congratulations, you caught them all! \nReturn to the IT Services booth to see if you have won a prize.</string>
    <string name="pikachu_screen_caught">You caught a Pikablaz!</string>
    <string name="bulbasaur_screen_caught">You caught a Matthiasaur!</string>
    <string name="mewtwo_screen_caught">You caught Mewpert!</string>
    <string name="charmander_screen_caught">You caught a Charmichael!</string>
    <string name="squirtle_screen_caught">You caught a Squidan!</string>
    <string name="mr_mime_screen_caught">You caught a Mr Malain!</string>
    <string name="meowth_screen_caught">You caught a Meowssi!</string>
    <string name="pidgey_screen_caught">You caught a Pidgluca!</string>
    <string name="flareon_screen_caught">You caught a Flarlos!</string>
    <string name="chansey_screen_caught">You caught a Chaso!</string>
    <string name="eevee_screen_caught">You caught an Lilevee!</string>
    <string name="jolteon_screen_caught">You caught a Joltelo!</string>
    <string name="jigglypuff_screen_caught">You caught a Jigglywill!</string>
    <string name="onix_screen_caught">You caught a Jurix!</string>
    <string name="slowpoke_screen_caught">You caught a Joaqpoke!</string>
    <string name="cubone_screen_caught">You caught a Curich!</string>
    <string name="vaporeon_screen_caught">You caught a Vaporgustin!</string>
    <string name="abra_screen_caught">You caught a Thomabra!</string>
    <string name="placeholder">EMBL was not affected by the recent ransomware outbreaks WannaCry and Petya. These attacks only affect Windows computers, and can be prevented by regular patching, using recent OS versions, and using anti-virus protection. <a href="http://intranet.embl.de">Click me!</a> However, future outbreaks are expected and they will probably be more advanced. EMBL users are strongly advised to back up their data (Tier-1, ownCloud and others are backed up daily), to be careful with suspicious emails, and not to use USB sticks of unknown origin. If in doubt, contact IT Services for advice.</string>
    <string name="coloured_pikachu_picture">Coloured Pikachu picture</string>
    <string name="scan_barcode_button">Scan barcode</string>
    <string name="no_barcode_captured">No barcode captured</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="from_itservices">From ITServices</string>
    <string name="timerVal">00:00:00</string>
    <string name="charmander_flavor_text">\n The Lizard \n EMBLmon \n \n H: 0.6m \n W: 8.5kg \n \n Rarity: Rare</string>
    <string name="abra_flavor_text">\n The Psi \n EMBLmon \n \n H: 0.9m \n W: 19.5kg \n \n Rarity: Common</string>
    <string name="bulbasaur_flavor_text">\n The Seed \n EMBLmon \n \n H: 0.7m \n W: 6.9kg \n \n Rarity: Rare</string>
    <string name="chansey_flavor_text">\n The Egg \n EMBLmon \n \n H: 1.1m \n W: 34.6kg \n \n Rarity: Common</string>
    <string name="cubone_flavor_text">\n The Lonely \n EMBLmon \n \n H: 0.4m \n W: 6.5kg \n \n Rarity: Common</string>
    <string name="eevee_flavor_text">\n The Evolution \n EMBLmon \n \n H: 0.3m \n W: 6.5kg \n \n Rarity: Rare</string>
    <string name="flareon_flavor_text">\n The Flame \n EMBLmon \n \n H: 0.9m \n W: 25.0kg \n \n Rarity: Very Rare</string>
    <string name="jigglypuff_flavor_text">\n The Balloon \n EMBLmon \n \n H: 0.5m \n W: 5.5kg \n \n Rarity: Common</string>
    <string name="jolteon_flavor_text">\n The Lightning \n EMBLmon \n \n H: 0.8m \n W: 24.5kg \n \n Rarity: Very Rare</string>
    <string name="meowth_flavor_text">\n The Scratch Cat \n EMBLmon \n \n H: 0.4m \n W: 4.2kg \n \n Rarity: Common</string>
    <string name="mewtwo_flavor_text">\n The Genetic \n EMBLmon \n \n H: 2.0m \n W: 122.0kg \n \n Rarity: Legendary</string>
    <string name="mr_mime_flavor_text">\n The Barrier \n EMBLmon \n \n H: 1.3m \n W: 54.5kg \n \n Rarity: Common</string>
    <string name="onix_flavor_text">\n The Rock Snake \n EMBLmon \n \n H: 8.8m \n W: 210.0kg \n \n Rarity: Common</string>
    <string name="pidgey_flavor_text">\n The Tiny Bird \n EMBLmon \n \n H: 0.3m \n W: 1.8kg \n \n Rarity: Common</string>
    <string name="pikachu_flavor_text">\n The Mouse \n EMBLmon \n \n H: 0.4m \n W: 6.0kg \n \n Rarity: Rare</string>
    <string name="slowpoke_flavor_text">\n The Dopey \n EMBLmon \n \n H: 1.2m \n W: 36.0kg \n \n Rarity: Common</string>
    <string name="squirtle_flavor_text">\n The Tiny Turtle \n EMBLmon \n \n H: 0.5m \n W: 9.0kg \n \n Rarity: Rare</string>
    <string name="vaporeon_flavor_text">\n The Bubble Jet \n EMBLmon \n \n H: 1.0m \n W: 29.0kg \n \n Rarity: Very Rare</string>
    <string name="username_field">Username...</string>
    <string name="password_field">Password...</string>
    <string name="home_screen_error">Error logging in!</string>
    <string name="embl_network_connection">Please make sure you\'re connected to an EMBL Network!</string>
    <string name="login_error_username_and_password">Error logging in, please check your Username and Password!</string>
    <string name="ldap_down_error">LDAP seems to be down, please try again!</string>
    <string name="username_already_taken">Username already taken, please choose a different name!</string>
    <string name="incorrect_guest_password">Incorrect Guest account Password!</string>
    <string name="home_screen_username_error">Please enter your username!</string>
    <string name="home_screen_password_error">Please enter your password!</string>
    <string name="game_not_started_error">Please wait until LabDay to Login!</string>
    <string name="forest_background_image_blurred">forest background image blurred</string>
    <string name="embl_style_pokeball">EMBL Style Pokeball</string>
    <string name="pokemon_style_labday_logo">Pokemon Style LabDay logo</string>
    <string name="nfcscreen_instructions">Find and capture all of the EMBLmon posters around the ATC \n Return to the IT Services booth to claim your prize \n The fastest time will win a grand prize, so get catching! </string>
    <string name="home_screen_instructions">Please enter your Username and Password</string>
    <string name="nfc_screen_username">Username</string>
    <string name="labday_logo_nfc_screen">labday_logo</string>
    <string name="abra_fact_text">Nickname: Thomas von Kiedrowski \n \nIs your Windows computer protected from malware threats? If your computer doesn\'t have any
    anti-virus protection installed, IT Services can install Kaspersky Anti-Virus for you - free of charge and even if you use
    a private computer for your work at EMBL. For more details, <a href="mailto:itsupport@embl.de">contact the Desktop Support team.</a></string>
    <string name="bulbasaur_fact_text">Nickname: Matthias Helmling \n \nDid you know that every user of EMBL ownCloud now has up to 50GB
    of free storage available to them? EMBL ownCloud now has over 1100 active users, with 1.2 million
    files shared. Don\'t have an account yet? Share stuff with others inside and outside of EMBL by signing
    up at <a href="http://oc.embl.de">oc.embl.de</a>. If you are not from EMBL Heidelberg you can still
    get an account, just contact <a href="mailto:itsupport@embl.de">itsupport@embl.de.</a></string>
    <string name="chansey_fact_text">Nickname: Vasiliki Karyoti \n \nDid you know that users across EMBL have access to Google Calendar? Visit
    <a href="gcal.embl.de">gcal.embl.de/it/fr (depending on your EMBL site)</a>, enter your local EMBL site username and password and start managing your
    calendar, contacts, tasks and notes in one place. Share calendars with colleagues or people outside EMBL,
     synchronize with your phone or computer, reserve a room or lab equipment. More information on Google
    Calendar is available <a href="https://intranet.embl.de/it_services/services/calendar/">here.</a></string>
    <string name="charmander_fact_text">Nickname: Michael Wahlers \n \nDid you know that SAP Admin Services now uses EMBL Single Sign-On? Currently
    available as a <a href="https://saperp.embl.de/nwbc">beta test</a>, you can now sign into SAP using your local EMBL site credentials and no longer need
     to remember a separate password to access the SAP time sheets, leave requests, shopping carts, etc. Visit the IT Services
     stand today to explore how simple it is. While the <a href="https://saperp.embl.de/nwbc">beta test</a> was recently announced in Heidelberg, users
    at other EMBL sites are welcome and encouraged to come and try.</string>
    <string name="cubone_fact_text">Nickname: Erich Schechinger \n \nIT Services has been working hard configuring the IT setup for the new EMBL
    Barcelona site. So far, the internal network, the firewalls and a 1Gb internet link have been established, which
    will be increased to a 10Gb link soon. The domain, web page, and user management are also up. Next
    up, data storage, virtualization and computing will be configured. From all in IT Services, we want to give
    a warm welcome to EMBL Barcelona and wish them a big success!</string>
    <string name="eevee_fact_text">Nickname: Lilian Montero \n \nBack in March, all 4 IT departments from across EMBL came together for an <a href="https://intranet.embl.de/communication_outreach/internal_news/2017/170511-it-retreat/index.html">EMBL
    IT Retreat</a> here in Heidelberg to foster cross-site collaboration, knowledge exchange and exploring joint
    projects along a coherent IT strategy. Key topics discussed included simplified access to IT resources
     shared across EMBL, establishing networking standards or cross-site disaster recovery. The meeting was very
     successful and we hope that it results in improvements to the IT services we provide to you, our users.</string>
    <string name="jigglypuff_fact_text">Nickname: Will Murphy \n \nEMBL email was recently made much faster and more reliable! The EMBL email service
     is now powered by SSD disk and is being mirrored across two data centres for better resilience.</string>
    <string name="flareon_fact_text">Nickname: Carlos Fernandez \n \nDid you know that EMBL\'s data centre is virtualised? The team currently operates
    450 virtual servers based on 3 VM clusters with a total of 600 CPU Cores and 6TB of RAM, and we use VMware vSphere
     and VMware Horizon. The main benefits of data centre virtualisation are around manageability, resilience and cost savings
     in energy and space.</string>
</resources>